fixed alignment for posts in city show page

--- a/app/assets/stylesheets/cities.scss
+++ b/app/assets/stylesheets/cities.scss
@@ -50,8 +50,9 @@
 .city-show-container {
    display: flex;
    flex-direction: column;
-   align-items: center;
    justify-content: center;
+   margin-right: 25%;
+   margin-left: 25%;
 }
 .post-div {
    display: flex;
